_sass/page_layout.scss
#site-nav-menu {
  overflow: hidden;

  transition-property: max-height, margin, padding, border;
  transition-duration: 0.7s;

  display: flex;
  flex-direction: column;

  &:not(.shown) {
    max-height: 0;
    padding-top: 0;
    padding-bottom: 0;
    margin-top: 0;
    margin-bottom: 0;
    overflow: hidden;
    border: solid 0 black;
    box-shadow: none;
  }

  &.shown {
    max-height: 9rem;
  }
}

#site-header {
  display: flex;
  flex-direction: row;
  align-items: center;
}

#site-title-block {
  display: flex;
  flex-direction: column;
}

#site-header-title {
  font-size: 2em;
}

#nav-menu-button {
  font-size: 3rem;
  padding: 0.1em 0.15em;
  margin: 0.5rem;
  margin-right: 1rem;
  border-radius: 0.5rem;
  border: 1px solid #2c2b2c;

  &:hover {
    cursor: pointer;
  }
}

a:visited {
  color: $visited-link-color;
}

#site-footer {
  justify-self: end;
  display: flex;
  flex-flow: row wrap;
  justify-content: space-around;
}

#site-footer-description {
  flex-basis: 30em;
}

hr {
  width: 100%;
}

html {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: start;
  height: 100%;
}

body {
  background-color: $body-background-color;
  color: $text-color;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  display: flex;
  flex-direction: column;
  justify-content: start;
  min-height: calc(100% - 1rem);
  width: min(100ch, 100%);
  align-items: stretch;
}

main {
  flex: 6 30em;
}

@include small-computer {

  body {
    background-color: $body-background-color;
    color: $text-color;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    display: flex;
    flex-direction: column;
    justify-content: start;
    min-height: calc(100% - 1rem);
  }

}

